Implementation for Product Entity and Design Pattern for Templates
